# Portmux

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SYNOPSIS.md  pyproject.toml
.github/workflows/: tests.yml
action/: idea.md  phase1.md  phase2.md  phase3.md
config/: config.toml.example
project-files/viva-prep/: 01-pitch.md  02-features.md  03-testing.md
src/portmux/: __init__.py  __main__.py  backend.py  cli.py  config.py  exceptions.py  forwards.py  models.py  output.py  profiles.py  service.py  session.py  startup.py  tmux_backend.py  utils.py  windows.py
src/portmux/backend/: __init__.py  protocol.py  tmux.py
src/portmux/commands/: __init__.py  add.py  init.py  list.py  monitor.py  profile.py  refresh.py  remove.py  status.py  watch.py
src/portmux/core/: __init__.py  config.py  profiles.py  service.py  startup.py
src/portmux/health/: __init__.py  checker.py  logger.py  monitor.py  state.py
src/portmux/ssh/: __init__.py  forwards.py
src/portmux/tmux/: __init__.py  session.py  windows.py
tests/: test_cli.py  test_config.py  test_forwards.py  test_health_checker.py  test_health_monitor.py  test_health_state.py  test_profiles.py  test_session.py  test_startup.py  test_tmux_backend.py  test_utils.py  test_windows.py
tests/e2e/: conftest.py
tests/e2e/forward/: test_lifecycle.py
tests/e2e/health/: test_checks.py
tests/e2e/monitor/: test_lifecycle.py
tests/e2e/scripts/: Dockerfile  entrypoint.sh  run.sh
tests/e2e/session/: test_lifecycle.py
tests/test_commands/: test_add.py  test_init.py  test_list.py  test_profile.py  test_refresh.py  test_remove.py  test_status.py
tests/unit/commands/: test_init.py  test_list.py  test_monitor.py  test_status.py  test_watch.py
tests/unit/core/: test_config.py  test_profiles.py  test_startup.py
tests/unit/health/: test_background_monitor.py  test_logger.py
tests/unit/ssh/: test_forwards.py
tests/unit/tmux/: test_window_diagnostics.py  test_windows.py
