[project]
name = "portmux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ashish Kumar Jha", email = "79639825+Ashish-Github193@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rich>=14.1.0",
    "toml>=0.10.2",
    "click>=8.1.0",
    "colorama>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
portmux = "portmux.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "pytest-cov>=6.0.0",
]
