[project]
name = "portmux"
version = "1.2.0"
description = "PortMUX will be a command-line **TUI tool** for orchestrating, monitoring, and dynamically managing multiple SSH port-forwarding sessions using **tmux** as the execution layer. It abstracts tmux complexity and focuses on **port-based workflows**, letting users create, refresh, remove, and inspect forwards without manual command composition."
readme = "README.md"
authors = [
    { name = "Ashish Kumar Jha", email = "79639825+Ashish-Github193@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rich>=14.1.0",
    "toml>=0.10.2",
    "click>=8.1.0",
    "colorama>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
portmux = "portmux.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "vulture>=2.14",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["portmux"]

[tool.bandit]
exclude_dirs = ["tests"]
